[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
fxhash = "0.2.1"
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
refslice = { path = "refslice" }



# enable lto in release mode
# [profile.release]
#lto = true
#codegen-units = 1



